--- a/Sunshine/app/src/main/res/menu/forecastfragment.xml
+++ b/Sunshine/app/src/main/res/menu/forecastfragment.xml
@@ -2,9 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_refresh"
-        android:showAsAction="ifRoom"
         android:title="@string/action_refresh1"
-        android:orderInCategory="100"
         app:showAsAction="never"/>
+    <item android:id="@+id/mapview"
+        android:title="@string/mapview"
+        app:showAsAction="never"></item>
 
 </menu>
