--- a/Sunshine/app/src/main/res/xml/preference_layout.xml
+++ b/Sunshine/app/src/main/res/xml/preference_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,6 +8,15 @@
         android:key="@string/pref_location_key"
         android:defaultValue="@string/pref_location_default"
         android:inputType="text"
+        android:persistent="true"
         android:singleLine="true" />
+
+    <ListPreference
+        android:title="Temperature"
+        android:key="@string/temperature"
+        android:summary="Second List Prefernce Summary"
+        android:defaultValue="@string/defaultUnit"
+        android:entries="@array/tempEntries"
+        android:entryValues="@array/tempValues"/>
 
 </PreferenceScreen>
