--- a/PopularMoviesI/app/src/main/res/layout/imageview_main.xml
+++ b/PopularMoviesI/app/src/main/res/layout/imageview_main.xml
@@ -3,6 +3,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/imageview_layoutid">
+    android:id="@+id/imageview_load">
 
 </ImageView>
