--- a/PopularMoviesI/app/src/main/res/layout/grid_detail.xml
+++ b/PopularMoviesI/app/src/main/res/layout/grid_detail.xml
@@ -1,30 +1,67 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".DetailActivity$PlacementFragment">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageview"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
+        android:text="New Text"
         android:id="@+id/movietitle"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/releasedate"
-        android:layout_above="@id/movietitle"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageview"
+        android:background="#f7efef"
+        android:autoText="false"
+        android:gravity="center_vertical"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
+        android:text="New Text"
         android:id="@+id/overview"
-        android:layout_above="@+id/releasedate"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/vote"
-        android:layout_above="@+id/overview"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="91dp"
+        android:gravity="center_vertical"
+        android:background="#f9f3f3" />
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:text="New Text"
+        android:id="@+id/releasedate"
+        android:layout_marginTop="159dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#f6eded"
+        android:gravity="center_vertical"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:text="New Text"
+        android:id="@+id/vote"
+        android:layout_below="@+id/releasedate"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="78dp"
+        android:gravity="center_vertical"
+        android:background="#f6ebeb"
+        android:textStyle="bold|italic" />
 </RelativeLayout>
