--- a/PopularMoviesI/app/src/main/res/layout/grid_detail.xml
+++ b/PopularMoviesI/app/src/main/res/layout/grid_detail.xml
@@ -11,57 +11,51 @@
         android:id="@+id/imageview"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/overview" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="70dp"
-        android:text="New Text"
         android:id="@+id/movietitle"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageview"
         android:background="#f7efef"
         android:autoText="false"
-        android:gravity="center_vertical"
-        android:textStyle="bold|italic" />
+        android:gravity="center"
+        android:textStyle="bold|italic"
+        android:layout_above="@+id/vote"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="70dp"
-        android:text="New Text"
         android:id="@+id/overview"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="91dp"
-        android:gravity="center_vertical"
-        android:background="#f9f3f3" />
+        android:gravity="center"
+        android:background="#f9f3f3"
+        android:layout_above="@+id/movietitle"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="70dp"
-        android:text="New Text"
         android:id="@+id/releasedate"
-        android:layout_marginTop="159dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:background="#f6eded"
-        android:gravity="center_vertical"
-        android:textStyle="bold|italic" />
+        android:gravity="center"
+        android:textStyle="bold|italic"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="70dp"
-        android:text="New Text"
         android:id="@+id/vote"
-        android:layout_below="@+id/releasedate"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="78dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:background="#f6ebeb"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:layout_above="@+id/releasedate"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
